--- a/config.json
+++ b/config.json
@@ -2,31 +2,33 @@
     "PLEX_URL": "",
     "PLEX_TOKEN": "",
     "TMDB_API_KEY": "",
-    "MOVIES_FOLDER": "",
-    "SHOWS_FOLDER": "",
-    "ANIME_FOLDER": "",
-    "CHINESE_DRAMA_FOLDER": "",
-    "DOCUMENTARY_FOLDER": "",
-    "AMERICAN_DRAMA_FOLDER": "",
-    "JAPANESE_KOREAN_DRAMA_FOLDER": "",
-    "SPORTS_FOLDER": "",
-    "VARIETY_SHOW_FOLDER": "",
+    "MOVIES_FOLDER": "Y:\\阿里云盘\\盘6\\分享\\电影\\0",
+    "SHOWS_FOLDER": "Y:\\阿里云盘\\盘6\\分享",
+    "ANIME_FOLDER": "Y:\\阿里云盘\\盘6\\分享\\动漫",
+    "CHINESE_DRAMA_FOLDER": "Y:\\阿里云盘\\盘6\\分享\\国剧",
+    "DOCUMENTARY_FOLDER": "Y:\\阿里云盘\\盘6\\分享\\纪录",
+    "AMERICAN_DRAMA_FOLDER": "Y:\\阿里云盘\\盘6\\分享\\美剧",
+    "JAPANESE_KOREAN_DRAMA_FOLDER": "Y:\\阿里云盘\\盘6\\分享\\日韩",
+    "SPORTS_FOLDER": "Y:\\阿里云盘\\盘6\\分享\\体育",
+    "VARIETY_SHOW_FOLDER": "Y:\\阿里云盘\\盘6\\分享\\综艺",
+    "destination_folder": "Y:\\阿里云盘\\盘6\\分享\\动漫",
     "language_option": "zh-CN",
     "ask_language_change": false,
-    "video_suffix_list": "mp4,mkv,flv,avi,mpg,mpeg,mov,ts,wmv,rm,rmvb,3gp,3g2,webm",
+    "video_suffix_list": "mp4,mkv,flv,avi,mpg,mpeg,mov,ts,wmv,rm,rmvb,3gp,3g2,webm,mp4a",
     "subtitle_suffix_list": "srt,ass,stl,sub,smi,sami,ssa,vtt",
-    "other_suffix_list": "nfo,jpg,txt,png,log",
-    "movie_title_format": "chinese_title,english_title,year,resolution,source,codec,audio_format,edit_version",
+    "other_suffix_list": "nfo,jpg,txt,png,log,jpeg,JPG,js,.torrent,.sfv",
+    "movie_title_format": "chinese_title,english_title,year,resolution,source,codec,bit_depth,hdr_info,audio_format,edit_version",
+    "tv_name_format": "{name}-S{season:0>2}E{episode:0>2}.{title}",
     "debug": true,
     "move_files": false,
-    "rename_seasons": false,
-    "show_delete_files": false,
-    "movie_delete_files": false,
     "append_data": false,
-    "tv_name_format": "{name}-S{season:0>2}E{episode:0>2}.{title}",
-    "elements_to_remove": [
-        "%7C,国语中字,简英双字,繁英雙字,泰语中字,3D,国粤双语,HD中字,\\d+分钟版"
-    ],
+    "rename_seasons": true,
+    "auto_rename": true, 
+    "show_delete_files": true,
+    "movie_delete_files": true,
+    "process_media": true,
+    "process_subtitle": true,
+    "elements_to_remove": "%7C,国语中字,简英双字,繁英雙字,泰语中字,3D,国粤双语,HD中字,\\d+分钟版,国语中字",
     "elements_regex": {
         "year": "\\b(19[0-9]{2}|20[0-5][0-9])\\b",
         "resolution": "\\b(?:HD)?(480P|540P|720P|1080P|2160P|4K|8K)\\b",
@@ -35,6 +37,6 @@
         "bit_depth": "\\b\\d{1,2}BIT\\b",
         "hdr_info": "(HDR10\\+|DV|SDR|HDR10|HDR|DOLBY VISION|HLG|DISPLAYHDR)",
         "audio_format": "\\b(MP3|AAC|WAV|FLAC|ALAC|APE|LPCM|DTS-HD MA|DTS-HD HR|DDP5 1|DTS:X|DTS-X|AC-3 EX|AC3EX|E-AC-3|DCA-MA|EAC3|TRUEHD|ATMOS|DTS|DD5 1|DD\\+|AC3|DD|EX|DDL|7 1|5 1|DTS-HD\\.MA\\.TrueHD\\.7\\.1\\.Atmos)\\b",
-        "edit_version": "\\b(PROPER|REPACK|LIMITED|IMAX|UNRATE|R-RATE|SE|DC|DIRECTOR'S CUT|THEATRICAL CUT|ANNIVERSARY EDITION|REMASTERED|OPEN MATTE)\\b"
+        "edit_version": "\\b(PROPER|REPACK|LIMITED|IMAX|UNRATE|R-RATE|SE|DC|DIRECTOR'S CUT|THEATRICAL CUT|ANNIVERSARY EDITION|REMASTERED|OPEN MATTE|3D)\\b"
     }
 }
