--- a/config.json
+++ b/config.json
@@ -2,41 +2,43 @@
     "PLEX_URL": "",
     "PLEX_TOKEN": "",
     "TMDB_API_KEY": "",
-    "MOVIES_FOLDER": "Y:\\阿里云盘\\盘6\\分享\\电影\\0",
+    "MOVIES_FOLDER": "Y:\\阿里云盘\\盘6\\1",
     "SHOWS_FOLDER": "Y:\\阿里云盘\\盘6\\分享",
     "ANIME_FOLDER": "Y:\\阿里云盘\\盘6\\分享\\动漫",
     "CHINESE_DRAMA_FOLDER": "Y:\\阿里云盘\\盘6\\分享\\国剧",
-    "DOCUMENTARY_FOLDER": "Y:\\阿里云盘\\盘6\\分享\\纪录",
-    "AMERICAN_DRAMA_FOLDER": "Y:\\阿里云盘\\盘6\\分享\\美剧",
-    "JAPANESE_KOREAN_DRAMA_FOLDER": "Y:\\阿里云盘\\盘6\\分享\\日韩",
+    "DOCUMENTARY_FOLDER": "Y:\\阿里云盘\\盘6\\00",
+    "AMERICAN_DRAMA_FOLDER": "Y:\\阿里云盘\\盘6\\分享\\美剧\\0",
+    "JAPANESE_KOREAN_DRAMA_FOLDER": "Y:\\阿里云盘\\盘6\\分享\\日韩\\0",
     "SPORTS_FOLDER": "Y:\\阿里云盘\\盘6\\分享\\体育",
     "VARIETY_SHOW_FOLDER": "Y:\\阿里云盘\\盘6\\分享\\综艺",
-    "destination_folder": "Y:\\阿里云盘\\盘6\\分享\\动漫",
+    "destination_folder": "Y:\\阿里云盘\\盘6\\分享\\综艺\\B",
     "language_option": "zh-CN",
     "ask_language_change": false,
-    "video_suffix_list": "mp4,mkv,flv,avi,mpg,mpeg,mov,ts,wmv,rm,rmvb,3gp,3g2,webm,mp4a",
-    "subtitle_suffix_list": "srt,ass,stl,sub,smi,sami,ssa,vtt",
+    "video_suffix_list": "mp4,mkv,flv,avi,mpg,mpeg,mov,ts,wmv,rm,rmvb,3gp,3g2,webm,mp4a,f4v",
+    "subtitle_suffix_list": "srt,ass,stl,sub,smi,sami,ssa,vtt,idx",
     "other_suffix_list": "nfo,jpg,txt,png,log,jpeg,JPG,js,.torrent,.sfv",
     "movie_title_format": "chinese_title,english_title,year,resolution,source,codec,bit_depth,hdr_info,audio_format,edit_version",
     "tv_name_format": "{name}-S{season:0>2}E{episode:0>2}.{title}",
+    "extract_title_from_parent_folder": false,
+    "mode": "tmdb",
     "debug": true,
     "move_files": false,
     "append_data": false,
     "rename_seasons": true,
-    "auto_rename": true, 
+    "auto_rename": true,
     "show_delete_files": true,
-    "movie_delete_files": true,
+    "movie_delete_files": false,
     "process_media": true,
     "process_subtitle": true,
     "elements_to_remove": "%7C,国语中字,简英双字,繁英雙字,泰语中字,3D,国粤双语,HD中字,\\d+分钟版,国语中字",
     "elements_regex": {
         "year": "\\b(19[0-9]{2}|20[0-5][0-9])\\b",
         "resolution": "\\b(?:HD)?(480P|540P|720P|1080P|2160P|4K|8K)\\b",
-        "source": "\\b(REMUX|BD|BDRIP|WEB-DL|WEBDL|WEBRIP|WEB|HR-HDTV|HRHDTV|HDTV|HDRIP|DVDRIP|DVDSCR|DVD|HDTC|TC|HQCAM|CAM|TS)\\b",
+        "source": "\\b(REMUX|BD|BDRIP|WEB-DL|WEB：DL|WEBDL|WEBRIP|WEB|HR-HDTV|HRHDTV|HDTV|HDRIP|DVDRIP|DVDSCR|DVD|HDTC|TC|HQCAM|CAM|TS)\\b",
         "codec": "\\b(X264|H264|H 264|H\\.264|X265|H265|H 265|H\\.265|HEVC|H265版|H264版|VP8|VP9|AV1|VC1|MPEG1|MPEG2|MPEG-4|Theora|ProRes)\\b",
         "bit_depth": "\\b\\d{1,2}BIT\\b",
-        "hdr_info": "(HDR10\\+|DV|SDR|HDR10|HDR|DOLBY VISION|HLG|DISPLAYHDR)",
-        "audio_format": "\\b(MP3|AAC|WAV|FLAC|ALAC|APE|LPCM|DTS-HD MA|DTS-HD HR|DDP5 1|DTS:X|DTS-X|AC-3 EX|AC3EX|E-AC-3|DCA-MA|EAC3|TRUEHD|ATMOS|DTS|DD5 1|DD\\+|AC3|DD|EX|DDL|7 1|5 1|DTS-HD\\.MA\\.TrueHD\\.7\\.1\\.Atmos)\\b",
+        "hdr_info": "(HDR10\\+|DV|DOVI|SDR|HDR10|HDR|DOLBY VISION|HLG|DISPLAYHDR)",
+        "audio_format": "\\b(MP3|AAC|WAV|FLAC|ALAC|APE|LPCM|DTS-HD MA|DTS-HD HR|DTS：HD|DDP5 1|DTS:X|DTS-X|AC-3 EX|AC3EX|E-AC-3|DCA-MA|EAC3|DCA：MA|TRUEHD|ATMOS|DTS|DD5 1|DD\\+|AC3|DD|EX|DDL|7 1|5 1|DTS-HD\\.MA\\.TrueHD\\.7\\.1\\.Atmos)\\b",
         "edit_version": "\\b(PROPER|REPACK|LIMITED|IMAX|UNRATE|R-RATE|SE|DC|DIRECTOR'S CUT|THEATRICAL CUT|ANNIVERSARY EDITION|REMASTERED|OPEN MATTE|3D)\\b"
     }
 }
